data/derived/fa15/progs/unify/prog2761.ml.out
Characters 193-194:
  if value > 9 then (value-10)::a 
                                ^
Error: This expression has type int * 'a
       but an expression was expected of type int list
